--- a/Test.ipynb
+++ b/Test.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Test.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM+NKNzAp/yC/RGJUKOkLL0",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPNhvFcsHG6ST1SGJF1jb4d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,41 +31,323 @@
     {
       "cell_type": "code",
       "source": [
-        "def mm(abs, tu, uj):\n",
-        "  print(abs*0.3 + tu*0.3 + uj*0.4)\n",
-        "\n",
-        "nt = 10\n",
-        "na = mm(80,80,80) + nt\n",
-        "\n",
-        "print(na)"
+        "!wget -O Mall_Customer.csv https://raw.githubusercontent.com/Nando1110/AIproject101/main/Dataset/CSV%20file/Mall_Customers.csv"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 252
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "XVdr6xmSyPWg",
-        "outputId": "eadefd1d-974b-4fb2-fa63-8355ad97bf89"
+        "id": "c1PeGn4XamkZ",
+        "outputId": "c6f16c20-476c-4b86-dd27-afe9e9885743"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "80.0\n"
+            "--2022-03-22 06:59:07--  https://raw.githubusercontent.com/Nando1110/AIproject101/main/Dataset/CSV%20file/Mall_Customers.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.110.133, 185.199.111.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 4286 (4.2K) [text/plain]\n",
+            "Saving to: ‘Mall_Customer.csv’\n",
+            "\n",
+            "\rMall_Customer.csv     0%[                    ]       0  --.-KB/s               \rMall_Customer.csv   100%[===================>]   4.19K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2022-03-22 06:59:07 (45.5 MB/s) - ‘Mall_Customer.csv’ saved [4286/4286]\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "_iM32HrAbCht"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dataset = pd.read_csv('https://raw.githubusercontent.com/Nando1110/AIproject101/main/Dataset/CSV%20file/Mall_Customers.csv', error_bad_lines=False)\n",
+        "dataset.keys()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S3vgbwtUbMrS",
+        "outputId": "5d104d7e-799b-4298-a0ed-e4512ab906fe"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/IPython/core/interactiveshell.py:2882: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version.\n",
+            "\n",
+            "\n",
+            "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
           ]
         },
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-3-8c669b98cc9c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mna\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m80\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m80\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m80\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mna\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'NoneType' and 'int'"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['CustomerID', 'Genre', 'Age', 'Annual Income (k$)',\n",
+              "       'Spending Score (1-100)'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dataset"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 424
+        },
+        "id": "pdqQgjMYcChk",
+        "outputId": "62356bab-87fc-4255-c701-67bb81763e14"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "     CustomerID   Genre  Age  Annual Income (k$)  Spending Score (1-100)\n",
+              "0             1    Male   19                  15                      39\n",
+              "1             2    Male   21                  15                      81\n",
+              "2             3  Female   20                  16                       6\n",
+              "3             4  Female   23                  16                      77\n",
+              "4             5  Female   31                  17                      40\n",
+              "..          ...     ...  ...                 ...                     ...\n",
+              "195         196  Female   35                 120                      79\n",
+              "196         197  Female   45                 126                      28\n",
+              "197         198    Male   32                 126                      74\n",
+              "198         199    Male   32                 137                      18\n",
+              "199         200    Male   30                 137                      83\n",
+              "\n",
+              "[200 rows x 5 columns]"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-99b05c3d-8dee-42fb-8f27-ca0cc08e5f05\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>CustomerID</th>\n",
+              "      <th>Genre</th>\n",
+              "      <th>Age</th>\n",
+              "      <th>Annual Income (k$)</th>\n",
+              "      <th>Spending Score (1-100)</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>19</td>\n",
+              "      <td>15</td>\n",
+              "      <td>39</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>21</td>\n",
+              "      <td>15</td>\n",
+              "      <td>81</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>3</td>\n",
+              "      <td>Female</td>\n",
+              "      <td>20</td>\n",
+              "      <td>16</td>\n",
+              "      <td>6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>4</td>\n",
+              "      <td>Female</td>\n",
+              "      <td>23</td>\n",
+              "      <td>16</td>\n",
+              "      <td>77</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>5</td>\n",
+              "      <td>Female</td>\n",
+              "      <td>31</td>\n",
+              "      <td>17</td>\n",
+              "      <td>40</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>195</th>\n",
+              "      <td>196</td>\n",
+              "      <td>Female</td>\n",
+              "      <td>35</td>\n",
+              "      <td>120</td>\n",
+              "      <td>79</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>196</th>\n",
+              "      <td>197</td>\n",
+              "      <td>Female</td>\n",
+              "      <td>45</td>\n",
+              "      <td>126</td>\n",
+              "      <td>28</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>197</th>\n",
+              "      <td>198</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>32</td>\n",
+              "      <td>126</td>\n",
+              "      <td>74</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>198</th>\n",
+              "      <td>199</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>32</td>\n",
+              "      <td>137</td>\n",
+              "      <td>18</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>199</th>\n",
+              "      <td>200</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>30</td>\n",
+              "      <td>137</td>\n",
+              "      <td>83</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>200 rows × 5 columns</p>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-99b05c3d-8dee-42fb-8f27-ca0cc08e5f05')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-99b05c3d-8dee-42fb-8f27-ca0cc08e5f05 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-99b05c3d-8dee-42fb-8f27-ca0cc08e5f05');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
         }
       ]
     }
