Dibuat menggunakan Colaboratory

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -6,7 +6,6 @@
       "name": "Test.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPNhvFcsHG6ST1SGJF1jb4d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +39,7 @@
         "id": "c1PeGn4XamkZ",
         "outputId": "c6f16c20-476c-4b86-dd27-afe9e9885743"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -70,7 +69,7 @@
       "metadata": {
         "id": "_iM32HrAbCht"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -86,7 +85,7 @@
         "id": "S3vgbwtUbMrS",
         "outputId": "5d104d7e-799b-4298-a0ed-e4512ab906fe"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,7 +124,7 @@
         "id": "pdqQgjMYcChk",
         "outputId": "62356bab-87fc-4255-c701-67bb81763e14"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -348,6 +347,38 @@
           },
           "metadata": {},
           "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 3 Years Later"
+      ],
+      "metadata": {
+        "id": "jY1TIlhRc_tN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Hello world H1')"
+      ],
+      "metadata": {
+        "id": "tjuHKThjdDkt",
+        "outputId": "3aace3ac-4a85-4263-fc41-8110e85c0613",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello world H1\n"
+          ]
         }
       ]
     }
